--- a/movie-service/src/main/resources/application.yaml
+++ b/movie-service/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 server:
   port: 8080
   servlet:
-    context-path: /movie
+    context-path: /api/v1
 spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/movie_service"
