--- a/movie-login/package.json
+++ b/movie-login/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "axios": "^1.12.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-use": "^17.6.0",
     "use-debounce": "^10.0.6"
