--- a/movie-service/src/main/resources/application.yaml
+++ b/movie-service/src/main/resources/application.yaml
@@ -4,8 +4,8 @@ server:
     context-path: /api/v1
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/movie_service"
-    username: root
+    url: "jdbc:mysql://localhost:3306/cinema"
+    username: newbie
     password: root
   jpa:
     hibernate:
