--- a/movie-login/package.json
+++ b/movie-login/package.json
@@ -21,7 +21,10 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "react-slick": "^0.31.0",
     "react-use": "^17.6.0",
+    "recharts": "^3.4.1",
+    "slick-carousel": "^1.8.1",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
