--- a/movie-service/src/main/resources/application.yaml
+++ b/movie-service/src/main/resources/application.yaml
@@ -7,10 +7,14 @@ spring:
     url: "jdbc:mysql://localhost:3306/movie_service?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Ho_Chi_Minh&useSSL=false"
     username: root
     password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
   security:
     enabled: false
   servlet:
