--- a/movie-service/src/main/resources/application.yaml
+++ b/movie-service/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
     context-path: /api/v1
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/movie_service?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Ho_Chi_Minh&useSSL=false"
+    url: "jdbc:mysql://localhost:3306/movie_service?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Ho_Chi_Minh&useSSL=false&allowPublicKeyRetrieval=true"
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
